# weekwise-website

./: LICENSE  app.py  pyproject.toml
templates/: home.html
